name:           monkey
version:        0.1.0.0
description:    
homepage:       
bug-reports:    
author:         Tobias Dammers
maintainer:     tdammers@gmail.com
copyright:      2019 Tobias Dammers
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/tdammers/monkey

library
  exposed-modules: Web.Monkey
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , aeson >=1.4.4.0 && <1.5
               , bytestring >=0.10.10.0 && <0.11
               , http-types >=0.12.3 && <0.13
               , text >=1.2.4.0 && <1.3
               , unordered-containers >=0.2.10.0 && <0.3
               , wai >=3.2.2.1 && <3.3
               , warp
  other-modules:
  default-language: Haskell2010
